# accessor-BLAS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  error_tobias.hpp
cuda/: CMakeLists.txt  atomics.cuh  dot_benchmark.cu  dot_kernels.cuh  dot_memory.cuh  gemv_benchmark.cu  gemv_kernels.cuh  gemv_memory.cuh  ir.cu  ir_memory.cuh  kernel_utils.cuh  kernels.cuh  main.cu  matrix_helper.cuh  memory.cuh  trsv_benchmark.cu  trsv_kernels.cuh  trsv_memory.cuh  utils.cuh
python/: 20210428_1830_v100_gemv.csv  compute_mean.py  plot_roofline.py  v100_gemv.csv
python/results/: 2021020210512_0843_v100_dot_error_avg_0,1.csv  20210428_1830_v100_gemv.csv  20210430_0600_v100_gemv_ab1_error.csv  20210430_0600_v100_gemv_ab1_flops.csv  20210430_0630_v100_gemv_a1b0_error.csv  20210430_0630_v100_gemv_a1b0_flops.csv  20210430_2000_v100_dot.csv  20210430_2000_v100_gemv_ab1_error.csv  20210430_2000_v100_gemv_ab1_flops.csv  20210505_1300_v100_dot_32xSM.csv  20210505_1300_v100_gemv_ab1_flops.csv  20210506_1600_v100_dot_-1,1.csv  20210506_1600_v100_gemv_ab1_error_-1,1.csv  20210506_1600_v100_gemv_ab1_flops_-1,1.csv  20210506_1800_v100_dot_0,1.csv  20210506_1800_v100_gemv_ab1_error_0,1.csv  20210506_1800_v100_gemv_ab1_flops_0,1.csv  20210506_1930_v100_dot_error_avg_-1,1.csv  20210512_1005_v100_gemv_error_special.csv  20210512_1005_v100_gemv_flops_special.csv  20210524_1739_v100_gemv_error.csv  20210524_1739_v100_gemv_time_ms.csv  20210524_1739_v100_trsv_error.csv  20210524_1739_v100_trsv_time_ms.csv  20210524_1742_v100_dot.csv  20210524_1742_v100_dot_error.csv  20210524_1830_v100_trsv_progress_error.csv  20210524_1830_v100_trsv_progress_time_ms.csv  20210525_0930_v100_trsv_error.csv  20210525_0930_v100_trsv_time_ms.csv  20210525_1509_v100_trsv_time_ms.csv  20210525_1746_v100_trsv_error.csv  20210525_1746_v100_trsv_time_ms.csv  20210526_1131_a100_trsv_time_ms.csv  20210526_1148_a100_trsv_time_ms.csv  20210526_1201_a100_dot.csv  20210526_1201_a100_dot_error.csv  20210526_1201_a100_gemv_error.csv  20210526_1201_a100_gemv_time_ms.csv  20210526_1503_v100_dot_0,1.csv  (+53 more)
